<resources>
    <string name="app_name">My Bookshelf</string>
    <string name="app_subtitle">Organize your Books</string>
    <string name="app_version" translatable="false">Ver: %1$s</string>
    <string-array name="splash_load_text">
        <item>Loading Books</item>
        <item>Placing Shelves</item>
        <item>Removing dust from Shelfs</item>
        <item>Sitting down Authors</item>
        <item>Maybe we lost a Book</item>
        <item>We\'re working on it</item>
    </string-array>
    <string name="nav_splash" translatable="false">My Bookshelf</string>
    <string name="nav_wishlist">Wishlist</string>
    <string name="nav_genres">Genres</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_settings">Settings</string>
    <string name="bnav_books">My Books</string>
    <string name="bnav_authors">Authors</string>
    <string name="bnav_publishers">Publishers</string>
    <string name="bnav_shelves">Shelves</string>
    <string name="nav_details" translatable="false">Details</string>
    <string name="nav_more" translatable="false">More</string>
    <string name="nav_barcode_text">Scan the Barcode</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch_daynight">Night Mode</string>
    <string name="action_day">Day</string>
    <string name="action_night">Night</string>
    <string name="dialog_select_add_title">What do you want to add?</string>
    <string name="dialog_select_add_book">Add New Book</string>
    <string name="dialog_select_add_shelves">Add New Shelves &amp; Shelf</string>
    <string name="dialog_select_add_wishlist">Add to Wishlist</string>
    <string name="nav_add_book">Add Book</string>
    <string name="add_book_wishlist">Add to Wishlist</string>
    <string name="add_book_required">* Required</string>
    <string name="add_book_title">Title</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_publisher">Publisher</string>
    <string name="add_book_genre">Genre</string>
    <string name="add_book_year">Year</string>
    <string name="add_book_pages">Pages</string>
    <string name="add_book_lang">Language</string>
    <string name="add_book_isbn">ISBN</string>
    <string name="add_book_read_status">Read Status</string>
    <string name="add_book_descp">Description</string>
    <string name="add_book_read_status1">Unread</string>
    <string name="add_book_read_status2">Reading</string>
    <string name="add_book_read_status3">Readed</string>
    <string name="add_book_shelves">Shelves</string>
    <string name="add_book_shelf">Shelf</string>
    <string name="add_book_error_til">" can\'t be empty"</string>
    <string name="add_book_error">Some fields can\'t be empty</string>
    <string name="add_book_saved_ok">%1$s Saved!</string>
    <string name="add_book_default_value_text">Default</string>
    <string name="add_book_get_isbn_info_error">No information found for this ISBN</string>
    <string name="add_book_isbn_help_text">You can search info by ISBN</string>
    <string name="add_cover_from_foder">Select from folder</string>
    <string name="dialog_select_isbn_title">Select</string>
    <string name="dialog_select_isbn_op1">Google Books API</string>
    <string name="dialog_select_isbn_op2">OpenLibrary API</string>
    <string name="dialog_isbn_search">Searching Info</string>
    <string name="action_add_barcode">Barcode Scanner</string>
    <string name="action_add_camera">Take Photo</string>
    <string name="nav_add_shelves_title">Add Shelves &amp; Shelf</string>
    <string name="nav_add_shelves_edit_title">Edit</string>
    <string name="add_shelves_name">Shelves Name</string>
    <string name="add_shelves_text_info">Create a new shelves. You can create it without shelf or as many as you want with a limit of 10.</string>
    <string name="add_shelves_last_title">Last Shelves:</string>
    <string name="add_shelf_bt">Add Shelf</string>
    <string name="add_shelf_name">Shelf Name</string>
    <string name="add_shelf_last_title">Last Shelf:</string>
    <string name="add_shelves_error_til">" can\'t be empty"</string>
    <string name="add_shelves_shelf_limit">You can\'t add more shelf</string>
    <string name="add_shelves_shelves_exists">This Shelves already exists</string>
    <string name="add_shelves_shelf_exists">This Shelf already exists</string>
    <string name="add_shelves_added">Shelves and/or Shelf created</string>
    <string name="add_shelves_edit_edited">Edited</string>
    <string name="nav_edit_book">Edit Book</string>
    <string name="edit_book_error">Some fields can\'t be empty</string>
    <string name="edit_book_edited">Book edited!</string>
    <string name="nav_edit_shelves">Edit Shelves/Shelf</string>
    <string name="edit_shelves_text_info">Edit shelves. If the new shelves name already exists, all the books in the old shelves will move to the new and you need to enter a shelf name.</string>
    <string name="edit_shelf_text_info">Edit shelf. If the new shelf name already exists, all the books in the old shelf will move to the new one.</string>
    <string name="edit_shelves_add_shelf">Select or create new shelf to move the books.</string>
    <string name="book_details_pages_text">"%1$d\nPages"</string>
    <string name="book_details_isbn_text">ISBN</string>
    <string name="book_details_more_info">More Info</string>
    <string name="book_details_rating">Book Rating</string>
    <string name="book_details_more_author">More from %1$s</string>
    <string name="book_details_more_publisher">More from %1$s</string>
    <string name="book_details_more_genre">See more of %1$s</string>
    <string name="book_details_contextmenu_header">Copy Text</string>
    <string name="book_details_contextmenu_copy">Copy</string>
    <string name="book_details_shelves_text">Shelves</string>
    <string name="book_details_shelf_text">Shelf</string>
    <string name="book_details_book_fav_text">Book added to Favs</string>
    <string name="book_details_book_unfav_text">Book deleted from Favs</string>
    <string name="action_book_edit">Edit Book</string>
    <string name="action_book_delete">Detele Book</string>
    <string name="action_share">Share</string>
    <string name="action_note">Add Note</string>
    <string name="action_read" translatable="false">Read</string>
    <string name="book_details_share_title">Share</string>
    <string name="book_details_share_text">"%1$s\n%2$s\n%3$s\n\n%4$s"</string>
    <string name="book_details_share_text_isbn">"%1$s\n%2$s\n%3$s\nISBN:&#160;%4$s\n\n%5$s"</string>
    <string name="book_details_dialog_note_title">Note</string>
    <string name="book_details_dialog_note_hint">Insert Note</string>
    <string name="book_details_dialog_note_positive">Save</string>
    <string name="book_details_dialog_note_negative">Cancel</string>
    <string name="book_details_dialog_note_saved">Note Saved!</string>
    <string name="action_popup_read_status_unread">Unread</string>
    <string name="action_popup_read_status_reading">Reading</string>
    <string name="action_popup_read_status_readed">Readed</string>
    <string name="book_details_dialog_delete_title">Warning!</string>
    <string name="book_details_dialog_delete_text">Are you sure you want to delete %1$s?</string>
    <string name="book_details_dialog_delete_positive">Delete</string>
    <string name="book_details_dialog_delete_negative">Cancel</string>
    <string name="book_details_dialog_delete_deleted">Book Deleted!</string>
    <string name="book_details_dialog_rating_text">Rate this Book</string>
    <string name="book_details_dialog_rating_positive">Rate</string>
    <string name="book_details_dialog_rating_negative">Cancel</string>
    <string name="book_details_dialog_rating_updated">Book rated!</string>
    <string name="recycler_no_books_text">There are no Books</string>
    <string name="recycler_no_authors_text">There are no Authors</string>
    <string name="recycler_no_publishers_text">There are no Publishers</string>
    <string name="recycler_no_shelves_text">There are no Shelves</string>
    <string name="recycler_no_books_in_shelves">There are no Books in this Shelves</string>
    <string name="recycler_no_books_in_shelf">There are no Books in this Shelf</string>
    <string name="recycler_no_wishlist_text">There are no Books in the Wishlist</string>
    <string name="recycler_no_genres_text">Add Books to see a list of genres</string>
    <string name="action_more_edit">Edit</string>
    <string name="action_more_delete">Delete</string>
    <string name="dialog_more_edit_title">Edit %1$s</string>
    <string name="dialog_more_edit_positive">Save</string>
    <string name="dialog_more_edit_negative">Cancel</string>
    <string name="dialog_more_edit_edited">Edited</string>
    <string name="dialog_more_edit_error">Error: it already exists</string>
    <string name="dialog_more_delete_title">Warning!</string>
    <string name="dialog_more_delete_text">If you delete %1$s, the associated books will also be deleted.</string>
    <string name="dialog_more_delete_positive">Delete</string>
    <string name="dialog_more_delete_negative">Cancel</string>
    <string name="dialog_more_delete_deleted">Deleted!</string>
    <string name="adapter_nbooks">Books: %1$d</string>
    <string name="adapter_nauthors">Authors: %1$d</string>
    <string name="action_popup_sort_last">Last Added</string>
    <string name="action_popup_sort_alpha">Alphabetically</string>
    <string name="action_popup_sort_unread">Unreaded</string>
    <string name="action_popup_sort_reading">Reading</string>
    <string name="action_popup_sort_readed">Readed</string>
    <string name="action_popup_sort_favs">Favorites</string>
    <string name="action_popup_sort_rated">Rated</string>
    <string name="action_popup_sort_authors_alpha">Alphabetically</string>
    <string name="action_popup_sort_authors_nbooks">Number of Books</string>
    <string name="settings_category_1_title">Design</string>
    <string name="settings_theme_title">Select Theme</string>
    <string name="settings_theme_subtitle">Select the Theme you want.</string>
    <string name="settings_badge_title">Badges</string>
    <string name="settings_badge_subtitle1">Hide count badges</string>
    <string name="settings_list_title">Books View Type</string>
    <string name="settings_list_subtitle1">Show books in list</string>
    <string name="settings_small_books_title">Books Size</string>
    <string name="settings_small_books_subtitle1">Show big</string>
    <string name="settings_small_shelves_title">Shelves Size</string>
    <string name="settings_small_shelves_subtitle1">Show big</string>
    <string name="settings_category_2_title">ISBN</string>
    <string name="settings_isbn_title">ISBN API</string>
    <string name="settings_isbn_subtitle">Select API for ISBN search</string>
    <string name="settings_category_3_title">Backup &amp; Data</string>
    <string name="settings_backup_title">Backup</string>
    <string name="settings_backup_subtitle_1">Do a backup</string>
    <string name="settings_restore_title">Restore</string>
    <string name="settings_restore_subtitle">Restore from backup</string>
    <string name="settings_csv_title">CSV File</string>
    <string name="settings_csv_subtitle">Create a CSV file</string>
    <string name="settings_reset_title">Delete All</string>
    <string name="settings_reset_subtitle">Delete all and reset the DB</string>
    <string name="nav_add_wishlist">Add to Wishlist</string>
    <string name="add_wishlist_text_info">Add a book to the Wishlist. When you have it you can pass it to your library.</string>
    <string name="add_wishlist_title">Title</string>
    <string name="add_wishlist_author">Author</string>
    <string name="add_wishlist_publisher">Publisher</string>
    <string name="add_wishlist_isbn">ISBN</string>
</resources>