<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/groupMain">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_books_tint"
            android:title="@string/bnav_books" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_wishlist_tint"
            android:title="@string/nav_wishlist" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_tag_text_tint"
            android:title="@string/nav_genres" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats_tint"
            android:title="@string/nav_stats" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/groupOptions">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_tint"
            android:title="@string/action_settings" />
    </group>
</menu>
