<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_more_delete"
        android:title="@string/action_more_delete"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more_edit"
        android:title="@string/action_more_edit"
        android:icon="@drawable/ic_edit_white"
        app:showAsAction="never" />

</menu>