<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:layout_marginBottom="100dp">
        <TextView
            android:id="@+id/tv_edit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_shelves_text_info"
            android:textColor="@color/colorTextTitle"
            android:layout_margin="16dp"/>

        <!-- Shelves Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_shelves_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true"
                app:helperText="@string/add_book_required"
                app:hintTextColor="@color/colorSecondary"
                app:startIconDrawable="@drawable/ic_shelves_tint"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/et_shelves_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/add_shelves_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Shelf Name -->
        <LinearLayout
            android:id="@+id/ll_shelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_shelves_add_shelf"
                android:textColor="@color/colorTextTitle"
                android:layout_marginBottom="6dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_shelf_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true"
                app:helperText="@string/add_book_required"
                app:hintTextColor="?attr/colorOnSurface"
                app:startIconDrawable="@drawable/ic_shelf_tint"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/et_shelf_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/add_shelf_name"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>