<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_wishlist_text_info"
            android:textColor="@color/colorTextTitle"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_wishlist_title"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_author"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_wishlist_author"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_publisher"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_wishlist_publisher"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_isbn"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_wishlist_isbn"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="13"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>